syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.grpc";
option java_outer_classname = "KeymanagerGRPC";

package br.com.zupacademy;

import "google/protobuf/timestamp.proto";

service KeymanagerListaGRPCService {
  rpc listaGRPC(ListaChavePixRequestGRPC) returns (ListaChavePixResponseGRPC) {}
}
service KeymanagerConsultaGRPCService {
  rpc consultaGRPC(ConsultaChavePixRequestGRPC) returns (ConsultaChavePixResponseGRPC) {}
}
service KeymanagerRegistraGRPCService {
  rpc registraGRPC(RegistraChavePixRequestGRPC) returns (RegistraChavePixResponseGRPC) {}
}
service KeymanagerRemoveGRPCService {
  rpc removeGRPC(RemoveChavePixRequestGRPC) returns (RemoveChavePixResponseGRPC) {}
}

enum TipoDeChaveGRPC {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF                = 1;
  CELULAR            = 2;
  EMAIL              = 3;
  ALEATORIA          = 4;
}

enum TipoDeContaGRPC {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}

/**
 * Listar chaves
 */
message ListaChavePixRequestGRPC {
  string clienteId  = 1;
}
message ListaChavePixResponseGRPC {
  message ChavePix {
    string pixId                = 1;
    TipoDeChaveGRPC tipo        = 2;
    string chave                = 3;
    TipoDeContaGRPC tipoDeConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clienteId         = 1;
  repeated ChavePix chaves = 2;
}

/**
 * Consulta chave
 */
message ConsultaChavePixRequestGRPC {
  message FiltroPixId {
    string clienteId  = 1;
    string pixId      = 2;
  }
  oneof filtro {
    FiltroPixId pixId = 1;
    string chave      = 2;
  }
}
message ConsultaChavePixResponseGRPC {
  message ChavePix {
    message ContaInfo {
      TipoDeContaGRPC tipo = 1;
      string instituicao   = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular  = 4;
      string agencia       = 5;
      string numeroDaConta = 6;
    }
    TipoDeChaveGRPC tipo    = 1;
    string chave            = 2;
    ContaInfo conta         = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }
  string clienteId = 1;
  string pixId     = 2;
  ChavePix chave   = 3;
}

/**
 * Registra chave
 */
message RegistraChavePixRequestGRPC {
  string clienteId        = 1;
  TipoDeChaveGRPC tipoDeChave = 2;
  string chave            = 3;
  TipoDeContaGRPC tipoDeConta = 4;
}
message RegistraChavePixResponseGRPC {
  string clienteId = 1;
  string pixId     = 2;
}

/**
 * Remove chave
 */
message RemoveChavePixRequestGRPC {
  string clienteId = 1;
  string pixId     = 2;
}
message RemoveChavePixResponseGRPC {
  string clienteId = 1;
  string pixId     = 2;
}